--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
 		"",
 		"all"
 	],
-	"subscriberSubreddits":[
+	"subscriberSubreddits": [
 		"pics",
 		"gaming",
 		"worldnews",
@@ -33,5 +33,6 @@
 	],
 	"count": 25,
 	"interval": 60,
-	"subscriberInterval": 3600
+	"subscriberInterval": 3600,
+	"port": 3000
 }
